src/k8s/platform/services/k8s-oidc/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oidc-discovery
  namespace: k8s-oidc
spec:
  entryPoints:
    - websecure
    - cloudflared
  routes:
    - kind: Rule
      match: >-
        Host(`k8s-oidc-lz.levizitting.com`) &&
        (Path(`/.well-known/openid-configuration`) || Path(`/openid/v1/jwks`)) &&
        Method(`GET`)
      middlewares:
        - name: oidc-discovery-strip-authorization
      services:
        - name: oidc-discovery-proxy
          port: 8001
          passHostHeader: true
  tls:
    secretName: k8s-oidc-lz-tls
